--- a/docker/dockerfiles/backend/Dockerfile
+++ b/docker/dockerfiles/backend/Dockerfile
@@ -7,9 +7,8 @@ RUN npm install
 FROM node:14.0.0-alpine
 WORKDIR /app
 COPY --from=backend /usr/src/app/node-modules ./node_modules
-COPY --from=backend /usr/src/app .
-#COPY --from=backend /usr/src/app/models .
-#COPY --from=backend /usr/src/app/routes .
+COPY --from=backend /usr/src/app/models .
+COPY --from=backend /usr/src/app/routes .
 COPY --from=backend /usr/src/app/db.js .
 COPY --from=backend /usr/src/app/index.js .
 CMD ["node", "index.js"]
