--- a/k8s/manifests/ingress.yaml
+++ b/k8s/manifests/ingress.yaml
@@ -7,11 +7,12 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/healthcheck-path: /healthz
+    # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca,subnet-0ccca36474902829a"
 spec:
   ingressClassName: alb
   rules:
-    - http:
+    - host: k8s-threetie-mainlb-b5b9250791-772470673.ap-south-1.elb.amazonaws.com
+      http:
         paths:
           - path: /api
             pathType: Prefix
@@ -21,21 +22,21 @@ spec:
                 port:
                   number: 3500
           - path: /healthz
-            pathType: Prefix
+            pathType: Exact
             backend:
               service:
                 name: api
                 port:
                   number: 3500
           - path: /ready
-            pathType: Prefix
+            pathType: Exact
             backend:
               service:
                 name: api
                 port:
                   number: 3500
           - path: /started
-            pathType: Prefix
+            pathType: Exact
             backend:
               service:
                 name: api
